Added HBS index

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <h2>Registration Backend</h2>
+    <h2>Registration Backend From Public Folder
+        Delete it after practice
+
+    </h2>
 
 </body>
 
